plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'org.beryx.jlink' version '3.1.1'
}

group = 'one.nfolio'
version = '0.2.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

tasks.register('copyRuntimeLibs', Copy) {
    from configurations.runtimeClasspath
    into "$buildDir/libs/runtime-libs"
}

dependencies {
    //testImplementation platform('org.junit:junit-bom:5.10.0')
    //testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'org.jsoup:jsoup:1.20.1'
    implementation 'com.linecorp.bot:line-bot-messaging-api-client:9.8.0'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.19.1'
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:2.25.0'
    implementation 'org.apache.logging.log4j:log4j-layout-template-json:2.23.1'
    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'org.apache.commons:commons-collections4:4.4'
}

application {
    mainClass = 'one.nfolio.Main'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'one.nfolio.Main'
        )
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '--add-reads', 'yorushika.scraping.main=ALL-UNNAMED'
    ]
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    imageDir = file("$buildDir/image")

    launcher {
        name = 'yorushika'
    }

    forceMergedJarPrefixes = ['log4j-slf4j2-impl', 'slf4j-api', 'log4j-layout-template-json']

    addExtraDependencies('line-bot-sdk', 'log4j', 'slf4j', 'jackson', 'jsoup', 'commons-collections4')
}

test {
    useJUnitPlatform()
}